view index de contact y loguin

--- a/app/views/contacts/home.html.erb
+++ b/app/views/contacts/home.html.erb
@@ -1,12 +1,15 @@
-<h1>Contactos</h1>
-<!-- app/views/sessions/new.html.erb -->
 <h1>Iniciar sesión</h1>
-<%= form_with url: session_path, method: :post, local: true do %>
-  <%= label_tag :email, 'Correo electrónico' %>
-  <%= text_field_tag :email %>
-  <%= label_tag :password, 'Contraseña' %>
-  <%= password_field_tag :password %>
-  <%= submit_tag 'Iniciar sesión' %>
-<% end %>
 
-<%= link_to 'Registrarse', new_user_registration_path %>
+<%= form_with url: session_path, method: :post, local: true do %>
+  <div>
+    <%= label_tag :email, 'Correo electrónico' %>
+    <%= text_field_tag :email %>
+  </div>
+  <div>
+    <%= label_tag :password, 'Contraseña' %>
+    <%= password_field_tag :password %>
+  </div>
+  <div>
+    <%= submit_tag 'Iniciar sesión' %>
+  </div>
+<% end %>
