--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,21 +1,39 @@
-<h1>Contactos</h1>
-<%= form_with url: contacts_path, method: :get, local: true do %>
-  <%= check_box_tag :family, 'true', params[:family] %>
-  <%= label_tag :family, 'Familia' %>
-  <%= check_box_tag :friend, 'true', params[:friend] %>
-  <%= label_tag :friend, 'Amigo' %>
-  <%= check_box_tag :customer, 'true', params[:customer] %>
-  <%= label_tag :customer, 'Cliente' %>
-  <%= check_box_tag :supplier, 'true', params[:supplier] %>
-  <%= label_tag :supplier, 'Proveedor' %>
-  <%= submit_tag 'Filtrar' %>
-<% end %>
-<%= link_to 'Nuevo Contacto', new_contact_path %>
+<h1>Lista de todos tus contactos</h1>
+
 <ul>
   <% @contacts.each do |contact| %>
     <li>
-      <%= link_to contact.full_name, contact_path(contact) %>
-      <%= image_tag contact.photo if contact.photo.attached? %>
+      <%= link_to contact.full_name, contact_path(contact) %> |
+      <%= link_to 'Editar', edit_contact_path(contact), class: 'btn btn-secondary' %> |
+      <%= link_to 'Eliminar', contact_path(contact), method: :delete, data: { confirm: '¿Estás seguro de que deseas eliminar este contacto?' }, class: 'btn btn-danger' %>
+    </li>
+  <% end %>
+</ul>
+<% if @contacts.any? %>
+  <% current_index = @contacts.index(@contact) %>
+  <% if current_index = 0 %>
+    <%= link_to 'Anterior', contact_path(@contacts[current_index - 1]), class: 'btn btn-secondary' %>
+  <% end %>
+  <% if current_index < @contacts.size - 1 %>
+    <%= link_to 'Siguiente', contact_path(@contacts[current_index + 1]), class: 'btn btn-secondary' %>
+  <% end %>
+<% end %>
+
+<%= link_to 'Agregar nuevo contacto', new_contact_path, class: 'btn btn-primary' %>
+
+
+<!-- Barra de búsqueda -->
+<%= form_tag contacts_path, method: :get, class: 'form-inline' do %>
+  <%= text_field_tag :search, params[:search], placeholder: 'Buscar contactos', class: 'form-control' %>
+  <%= submit_tag 'Buscar', class: 'btn btn-primary' %>
+<% end %>
+
+<ul>
+  <% @contacts.each do |contact| %>
+    <li>
+      <%= link_to contact.full_name, contact_path(contact) %> |
+      <%= link_to 'Editar', edit_contact_path(contact), class: 'btn btn-secondary' %> |
+      <%= link_to 'Eliminar', contact_path(contact), method: :delete, data: { confirm: '¿Estás seguro de que deseas eliminar este contacto?' }, class: 'btn btn-danger' %>
     </li>
   <% end %>
 </ul>
